Deprecation of ReleaseId, ReleaseVersion and ReleaseOrigin in favor of ScmRepository and ScmRevision